lab1/Test/L1-A-7-31.output
Error Type A at Line 12
Error Type A at Line 24
Error Type A at Line 34
Error Type A at Line 39
Error Type A at Line 45
